// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Mock render - default - value[0] - ChromeColorSelector 1`] = `
Array [
  Array [
    Object {
      "className": "{\\"style\\":[{\\"marginBottom\\":\\"0px !important\\"},null]}",
      "color": "#000000",
      "disableAlpha": undefined,
      "id": "default_input",
      "onChange": [Function],
      "onChangeComplete": [Function],
    },
    Object {},
  ],
]
`;

exports[`Mock render - defaultColor - value[0] - ChromeColorSelector 1`] = `
Array [
  Array [
    Object {
      "className": "{\\"style\\":[{\\"marginBottom\\":\\"0px !important\\"},null]}",
      "color": "#FF0000",
      "disableAlpha": undefined,
      "id": "defaultColor_input",
      "onChange": [Function],
      "onChangeComplete": [Function],
    },
    Object {},
  ],
]
`;

exports[`Mock render - disableAlpha - value[0] - ChromeColorSelector 1`] = `
Array [
  Array [
    Object {
      "className": "{\\"style\\":[{\\"marginBottom\\":\\"0px !important\\"},null]}",
      "color": "#000000",
      "disableAlpha": true,
      "id": "disableAlpha_input",
      "onChange": [Function],
      "onChangeComplete": [Function],
    },
    Object {},
  ],
]
`;

exports[`Mock render - inputStyle - value[0] - ChromeColorSelector 1`] = `
Array [
  Array [
    Object {
      "className": "{\\"style\\":[{\\"marginBottom\\":\\"0px !important\\"},{\\"border\\":\\"3px solid blue\\"}]}",
      "color": "#000000",
      "disableAlpha": undefined,
      "id": "inputStyle_input",
      "onChange": [Function],
      "onChangeComplete": [Function],
    },
    Object {},
  ],
]
`;

exports[`Mock render - label-disabled - value[0] - ChromeColorSelector 1`] = `
Array [
  Array [
    Object {
      "className": "{\\"style\\":[{\\"marginBottom\\":\\"0px !important\\"},null]}",
      "color": "#000000",
      "disableAlpha": undefined,
      "id": "label-disabled_input",
      "onChange": [Function],
      "onChangeComplete": [Function],
    },
    Object {},
  ],
]
`;

exports[`Mock render - title - value[0] - ChromeColorSelector 1`] = `
Array [
  Array [
    Object {
      "className": "{\\"style\\":[{\\"marginBottom\\":\\"0px !important\\"},null]}",
      "color": "#000000",
      "disableAlpha": undefined,
      "id": "title_input",
      "onChange": [Function],
      "onChangeComplete": [Function],
    },
    Object {},
  ],
]
`;
